# dotfiles

./: .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  LICENSE.txt  MIGRATION.md  Makefile  README.md  install  install_macos  install_osx  install_ubuntu  justfile
ag/: agignore
alacritty/: alacritty.toml  alacritty_macos.toml  alacritty_macos.yml
antidote/: zsh_plugins.txt
bash/: bashrc
bat/: config
broot/: conf.hjson
broot/skins/: dark-blue.hjson
claude/: settings.json  statusline-spaceship.sh  statusline.sh
claude/agents/: ousterhout-code-review.md  ousterhout-codebase-review.md  simplify.md
claude/hooks/: format-and-lint.sh  format.sh  post-edit.sh  pre-bash.sh  session-start.sh
claude/skills/scaffold/assets/fullstack-boilerplate/backend/: pyproject.toml
claude/skills/scaffold/assets/fullstack-boilerplate/backend/src/: database.py
claude/skills/scaffold/assets/fullstack-boilerplate/backend/src/api/: health.py  items.py
claude/skills/scaffold/assets/fullstack-boilerplate/backend/src/models/: item.py
claude/skills/scaffold/assets/rust-cli/: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
clojure/: profiles.clj
codex/: config.toml
conda/: condarc
ghostty/: config
git/: gitconfig  gitignore_global
highlight/: mjw.theme  zenburn.theme
iTerm2/: brown.itermcolors  minimal.itermcolors
ipython/: 00-imports.py  ipython_config.py
ipython/startup/: 00-imports.py
jupyter/: Pipfile  imports.ipynb
karabiner/: karabiner.edn
litecli/: config
notes/: fuzzynotes  install  modd.conf
pgcli/: config
ranger/: mjw.py  rc.conf  rifle.conf  scope.sh  zenburn.py
readline/: inputrc
rg/: rgignore
shell/: analytics  profile
shell/bash/: bashrc
shell/zsh/: zpreztorc  zprofile  zshenv  zshrc
starship/: starship.toml
tests/: claude-hooks.sh  shell.sh
tmux/: tmux.conf
vim/: init.lua  init.vim  vimrc
vim/colors/: brown.vim  minimal.vim  yellow.vim
vim/misc/: clang-format  clang-format-spaces  clang-format-tabs  (+1 more)
zsh/: zpreztorc  zshenv  zshrc
(+73 files in other folders)
