[package]
name = "mycli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust CLI boilerplate"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
indicatif = "0.17"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
